tests/negative/test_decl_cn_arr_not_init.orb
fnc main() () {
    sym array:(i32 4 cn);
};